--- a/client/udacity-posts/package.json
+++ b/client/udacity-posts/package.json
@@ -18,6 +18,10 @@
     "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FernandoFEE/udacity-posts"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
